feat: phase 2 infrastructure
